feat: add order status filter on GET /orders